tests/ui/layout/reprc-power-alignment.stderr
error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:13:1
   |
LL | pub struct Floats {
   | ^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:21:1
   |
LL | pub struct Floats2 {
   | ^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:29:1
   |
LL | pub struct Floats3 {
   | ^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:37:1
   |
LL | pub struct Floats4 {
   | ^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:45:1
   |
LL | pub struct Floats5 {
   | ^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:53:1
   |
LL | pub struct FloatAgg1 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:60:1
   |
LL | pub struct FloatAgg2 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:67:1
   |
LL | pub struct FloatAgg3 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:75:1
   |
LL | pub struct FloatAgg4 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:82:1
   |
LL | pub struct FloatAgg5 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:90:1
   |
LL | pub struct FloatAgg6 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:98:1
   |
LL | pub struct FloatAgg7 {
   | ^^^^^^^^^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:107:1
   |
LL | pub struct A {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:113:1
   |
LL | pub struct B {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:121:1
   |
LL | pub struct C {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:128:1
   |
LL | pub struct D {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:134:1
   |
LL | pub struct E {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:141:1
   |
LL | pub struct F {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(4 bytes) }
  --> $DIR/reprc-power-alignment.rs:148:1
   |
LL | pub struct G {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(1 bytes) }
  --> $DIR/reprc-power-alignment.rs:158:1
   |
LL | pub struct H {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(1 bytes) }
  --> $DIR/reprc-power-alignment.rs:168:1
   |
LL | pub struct I {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(1 bytes) }
  --> $DIR/reprc-power-alignment.rs:179:1
   |
LL | pub struct J {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:186:1
   |
LL | pub struct K {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:196:1
   |
LL | pub struct L {
   | ^^^^^^^^^^^^

error: align: AbiAlign { abi: Align(8 bytes) }
  --> $DIR/reprc-power-alignment.rs:203:1
   |
LL | pub struct M {
   | ^^^^^^^^^^^^

error: aborting due to 25 previous errors

